# Platformer

./: .gitignore  CMakeLists.txt  main.cpp
header/: player.h
include/: enemy.h  player.h  playerselect.h  timer.h  userinput.hpp
source/: player.cpp
src/: enemy.cpp  levelgen.cpp  main.cpp  player.cpp  playerselect.cpp
src/enemy/: enemy.cpp  enemy.h
src/enemyhelper/: enemyhelper.cpp  enemyhelper.h
src/helpers/: helpers.hpp  userinput.hpp
src/levelgen/: levelgen.h
src/map/: tilemap.cpp  tilemap.h
src/player/: CMakeLists.txt  player.cpp  player.h
src/playerhelper/: playerhelper.cpp  playerhelper.h
